--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
+##JWT
 jwt.secret=somesecretkey
 jwt.expired=1
+## datasource
+spring.datasource.url=jdbc:postgresql://localhost/link_converter
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+#show sql statement
+logging.level.org.hibernate.SQL=debug
+#show sql values
+logging.level.org.hibernate.type.descriptor.sql=trace
